# xdmod-ondemand

./: AUTHORS.md  CHANGELOG.md  CNAME  README.md  _config.yml  build.json  configuration.md  faq.md  ingestion-aggregation.md  install.md  overview.md  pyproject.toml  recategorizing-applications.md  requirements.md  update.sh  usage.md  xdmod-ondemand.spec.in
.circleci/: config.yml
10.0/: faq.md  overview.md
10.5/: overview.md  upgrade.md
11.0/: configuration.md  overview.md
9.5/: configuration.md  install.md  overview.md  requirements.md  usage.md
_data/: v10_0toc.yml  v10_5toc.yml  v11_0toc.yml  v9_5toc.yml
classes/OpenXdmod/Migration/Version1100To1101/: DatabasesMigration.php  OnDemandDatabasesMigration.php
classes/OpenXdmod/Setup/: OnDemandDbSetup.php  OnDemandSetup.php
configuration/datawarehouse.d/: ondemand.json
configuration/etl/etl.d/: ondemand-migration-10_0_0-10_5_0.json  ondemand-migration-10_0_3-10_5_0.json  ondemand-migration-10_5_0-11_0_0.json  ondemand-migration-10_5_1-11_0_0.json  ondemand-migration-11_0_0-11_0_1.json  ood.json
configuration/etl/etl_action_defs.d/ood/: dimensions.json  facts.json  normalized.json  pagefact_by_.json  staging.json
configuration/etl/etl_data.d/ood/: application-map.json  application_map.json  empty.mmdb  report-template-charts.json  report-templates.json  request-path-filter.json
configuration/etl/etl_sql.d/ood/: dimension_orderid.sql  ondemand-migration-10_5_1-11_0_0-replace-unknown-location.sql  ondemand-migration-10_5_1-11_0_0-resize-normalized-columns.sql  ondemand-migration-11_0_0-11_0_1-fix-reverse-proxy-ports.sql  person_lookup.sql
configuration/etl/etl_tables.d/ood/: app.json  client.json  location.json  normalized.json  os.json  (+8 more)
configuration/portal_settings.d/: ondemand.ini
configuration/resource_types.d/: ondemand.json
configuration/roles.d/: ondemand:dashboard.json  ood.json
configuration/setup.d/: ondemand.json
docs/: configuration.md  faq.md  ingestion-aggregation.md  install.md  overview.md  recategorizing-applications.md  upgrade.md  usage.md
docs/_data/: toc.yml
post_ood_logs_to_access_mms/: __version__.py  conf.ini  post_ood_logs_to_access_mms.py  post_ood_logs_to_access_mms.sh
templates/: portal_settings.template
tests/: simple_web_server.py  test.py
tests/artifacts/regression/: chartFilterTests.json
tests/regression/: bootstrap.php
tests/scripts/: bootstrap.sh  setup.tcl
tools/xdmod-ondemand-export/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
tools/xdmod-ondemand-export/docs/: developing.md
tools/xdmod-ondemand-export/post_ood_logs_to_access_mms/: post_ood_logs_to_access_mms.sh
tools/xdmod-ondemand-export/tests/: simple_web_server.py  test.py
tools/xdmod-ondemand-export/tests/artifacts/: sample.json
tools/xdmod-ondemand-export/tests/artifacts/401/outputs/: access.log.0
tools/xdmod-ondemand-export/tests/artifacts/combined_logformat/outputs/: access.log.0
tools/xdmod-ondemand-export/tests/artifacts/common_logformat/outputs/: access.log.0
tools/xdmod-ondemand-export/tests/artifacts/compressed/outputs/: access.log.0
tools/xdmod-ondemand-export/tests/artifacts/default/outputs/: access.log.0
tools/xdmod-ondemand-export/tests/artifacts/delete_old_json/inputs/: input.json
tools/xdmod-ondemand-export/tests/artifacts/delete_old_json/outputs/: output.json
tools/xdmod-ondemand-export/tests/artifacts/empty_lines/outputs/: access.log.0
tools/xdmod-ondemand-export/tests/artifacts/empty_user/outputs/: access.log.0
tools/xdmod-ondemand-export/tests/artifacts/file_matching_last_line/inputs/: access.log.1
tools/xdmod-ondemand-export/tests/artifacts/file_matching_last_line/outputs/: access.log.0  access.log.1
tools/xdmod-ondemand-export/tests/artifacts/invalid_compressed_file/outputs/: access.log.1
tools/xdmod-ondemand-export/tests/artifacts/invalid_compressed_lines/outputs/: access.log.0
tools/xdmod-ondemand-export/tests/artifacts/some_old_some_new/inputs/: access.log.0  access.log.1  access.log.2  input.json
tools/xdmod-ondemand-export/tests/artifacts/some_old_some_new/outputs/: access.log.0  access.log.1  output.json
tools/xdmod-ondemand-export/tests/artifacts/some_old_some_new_compressed/inputs/: input.json
tools/xdmod-ondemand-export/tests/artifacts/some_old_some_new_compressed/outputs/: access.log.0  access.log.3  output.json
tools/xdmod-ondemand-export/tests/artifacts/two_runs/first_run/inputs/: access.log.0
tools/xdmod-ondemand-export/tests/artifacts/two_runs/first_run/outputs/: access.log.0  access.log.1  output.json
tools/xdmod-ondemand-export/tests/artifacts/two_runs/second_run/inputs/: access.log.0
tools/xdmod-ondemand-export/tests/artifacts/two_runs/second_run/outputs/: access.log.0  access.log.1  output.json
tools/xdmod-ondemand-export/tests/artifacts/two_runs_compressed/first_run/outputs/: access.log.1  output.json
tools/xdmod-ondemand-export/tests/artifacts/two_runs_compressed/second_run/outputs/: access.log.0  access.log.1  output.json
tools/xdmod-ondemand-export/tests/artifacts/two_runs_file_size_changes/first_run/inputs/: access.log.0
tools/xdmod-ondemand-export/tests/artifacts/two_runs_file_size_changes/first_run/outputs/: access.log.0  access.log.1  output.json
tools/xdmod-ondemand-export/tests/artifacts/two_runs_file_size_changes/second_run/outputs/: access.log.0  output.json
tools/xdmod-ondemand-export/tests/artifacts/two_runs_first_all_unauthenticated/first_run/inputs/: access.log.0
tools/xdmod-ondemand-export/tests/artifacts/two_runs_first_all_unauthenticated/first_run/outputs/: output.json
tools/xdmod-ondemand-export/tests/artifacts/two_runs_first_all_unauthenticated/second_run/inputs/: access.log.0  access.log.1
tools/xdmod-ondemand-export/tests/artifacts/two_runs_first_all_unauthenticated/second_run/outputs/: access.log.0  access.log.1  output.json
tools/xdmod-ondemand-export/tests/artifacts/weird_logformat/outputs/: access.log.0
tools/xdmod-ondemand-export/xdmod_ondemand_export/: __init__.py  __version__.py  conf.ini  xdmod-ondemand-export.sh  xdmod_ondemand_export.py
(+215 files in other folders)
