[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "post-ood-logs-to-access-mms"
version = "1.0.0"
description = "Python tool for extracting Open OnDemand logs and POSTing them to the ACCESS MMS team for inclusion in XDMoD."
readme = "README.md"
license = "LICENSE"
authors = [
    {name = "Aaron Weeden", email = "aaronwee@buffalo.edu"}
]
maintainers = [
    {name = "XDMoD team", email = "ccr-xdmod-help@buffalo.edu"}
]
requires-python = ">=3"
dependencies = [
    "requests"
]

[project.urls]
repository = "https://github.com/ubccr/post-ood-logs-to-access-mms.git"
