[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "post-ood-logs-to-access-mms"
description = "Python tool for parsing Open OnDemand logs and POSTing them to the ACCESS MMS team for inclusion in XDMoD."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Aaron Weeden", email = "aaronwee@buffalo.edu"}
]
maintainers = [
    {name = "XDMoD team", email = "ccr-xdmod-help@buffalo.edu"}
]
requires-python = ">=3.7"
dependencies = [
    "apachelogs",
    "requests>=2.20.0"
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/ubccr/post-ood-logs-to-access-mms.git"

[tool.setuptools.dynamic]
version = {file = "post_ood_logs_to_access_mms/VERSION"}
