[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xdmod-ondemand-export"
description = "POST Open OnDemand logs to a web server for inclusion in XDMoD."
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    {name = "XDMoD team", email = "ccr-xdmod-help@buffalo.edu"}
]
requires-python = ">=3.6"
dependencies = [
    "apachelogs",
    "requests"
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/ubccr/xdmod-ondemand/tree/main/tools/xdmod-ondemand-export"

[tool.setuptools.dynamic]
version = {attr = "xdmod_ondemand_export.__version__"}

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
xdmod_ondemand_export = ["conf.ini", "xdmod-ondemand-export.sh"]
