[metadata]
name = xdmod-ondemand-export
version = attr: xdmod_ondemand_export.__version__
author = XDMoD Team
author_email = ccr-xdmod-help@buffalo.edu
description = POST Open OnDemand logs to a web server for inclusion in XDMoD.
license_files = LICENSE
project_urls =
    repository = https://github.com/ubccr/xdmod-ondemand/tree/main/tools/xdmod-ondemand-export

[options]
packages = find:
python_requires = >=3.6
install_requires =
    apachelogs
    requests
include_package_data = True

[options.package_data]
xdmod_ondemand_export = conf.ini, xdmod-ondemand-export.sh
