[metadata]
name = xdmod-ondemand-export
version = attr: xdmod_ondemand_export.__version__
author = Aaron Weeden
maintainer = Aaron Weeden, Joseph P. White
description = POST Open OnDemand logs to a web server for inclusion in XDMoD.
long_description = See [https://github.com/ubccr/xdmod-ondemand/tree/main/tools/xdmod-ondemand-export](the README) for instructions on use.
long_description_content_type = text/markdown
license_files = LICENSE
project_urls =
    Source Code = https://github.com/ubccr/xdmod-ondemand/tree/main/tools/xdmod-ondemand-export

[options]
packages = find:
python_requires = >=3.6
install_requires =
    apachelogs >= 0.6.0
    requests >= 2.27.1
include_package_data = True

[options.package_data]
xdmod_ondemand_export = conf.ini

[options.entry_points]
console_scripts =
    xdmod-ondemand-export = xdmod_ondemand_export:main
